get RG info from AlignedRead object testing

--- a/src/pedgraph.ipynb
+++ b/src/pedgraph.ipynb
@@ -11,163 +11,13 @@
      "collapsed": true, 
      "input": [
       "from Genotype import *", 
-      "", 
-      "g=Genotype('AA',2)"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 10
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "print g"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "AA\t2"
-       ]
-      }
-     ], 
-     "prompt_number": 11
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      ""
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "AA\t2", 
-        "AC\t2", 
-        "AG\t2", 
-        "AT\t2", 
-        "CC\t2", 
-        "CG\t2", 
-        "CT\t2", 
-        "GG\t2", 
-        "GT\t2", 
-        "TT\t2"
-       ]
-      }
-     ], 
-     "prompt_number": 12
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "import math", 
-      "def PhredScore ( errorprob):", 
-      "    return   -10 * math.log10(errorprob)", 
-      "def ErrorProb( phredscore ):", 
-      "    return pow(10,(-phredscore/10))", 
-      "print PhredScore( .10) "
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "10.0"
-       ]
-      }
-     ], 
-     "prompt_number": 13
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "print ErrorProb(10)"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "0.1"
-       ]
-      }
-     ], 
-     "prompt_number": 14
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "phredscores =[ 10,20,30,40]", 
-      "for p in phredscores:", 
-      "    print ErrorProb(p)"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "0.1", 
-        "0.01", 
-        "0.001", 
-        "0.0001"
-       ]
-      }
-     ], 
-     "prompt_number": 15
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "errors=[.1,.01,.001,.0001]", 
-      "for e in errors:", 
-      "    print PhredScore(e)"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "10.0", 
-        "20.0", 
-        "30.0", 
-        "40.0"
-       ]
-      }
-     ], 
-     "prompt_number": 16
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": true, 
-     "input": [
-      "from common import *"
-     ], 
-     "language": "python", 
-     "outputs": [], 
-     "prompt_number": 17
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
+      "from common import *", 
       "import numpy as np", 
       "from itertools import *", 
       "genotypes=[] #list of Genotype objects", 
       "ploidys=[2]", 
+      "#enumerate possible genotype combinations for the value of ploidy", 
+      "#with the bases A,C,G,T", 
       "for p in ploidys:", 
       "    l=[ combo for combo in combinations_with_replacement(['A','C','G','T'],p) ]", 
       "    for g in l:", 
@@ -176,58 +26,71 @@
       "", 
       "pileup=[('A', 22), ('A', 4), ('T', 29)]", 
       "h=len(pileup)", 
+      "#the likelihood matrix is a 10 column matrix", 
+      "#the number of rows is equal to the pileup count i.e. coverage at position", 
+      "#we pre-allocate the likelihood matrix", 
       "likelihood_matrix=np.zeros( (h,10) )", 
-      "print likelihood_matrix", 
+      "", 
+      "#now we iterate through pileup, taking the ith called base and quality", 
       "for i in range(h):", 
       "    (calledBase, phred)=pileup[i]", 
-      "    #print calledBase, phred", 
+      "    #for the jth possible genotype", 
       "    for j in range( len( genotypes)):", 
-      "", 
+      "        #get the error probability", 
       "        errorprob=ErrorProb( phred)", 
-      "       #print g.calculateBaseLikelihood(calledBase,errorprob), math.log10(g.calculateBaseLikelihood(calledBase,errorprob))", 
-      "        #print genotypes[j].calculateBaseLikelihood(calledBase,errorprob)", 
+      "        #calculate the base likelihood (Pr(B=b|G=g)", 
+      "        #fill in likelihood for the ith pileuped base for the jth possible genotype", 
       "        likelihood_matrix[i,j]=genotypes[j].calculateBaseLikelihood(calledBase,errorprob)", 
-      "print likelihood_matrix", 
-      "print np.log(likelihood_matrix)"
+      "", 
+      "", 
+      "#now this is the log likelihood ", 
+      "#print np.log(likelihood_matrix)", 
+      "#the overall (log) likelihood are each of the 10 column sums", 
+      "genotypelikelihoods=np.sum( np.log(likelihood_matrix), axis=0)"
      ], 
      "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "[[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]", 
-        " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]", 
-        " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]]", 
-        "[[  9.99000000e-01   4.99666667e-01   4.99666667e-01   4.99666667e-01", 
-        "    3.33333333e-04   3.33333333e-04   3.33333333e-04   3.33333333e-04", 
-        "    3.33333333e-04   3.33333333e-04]", 
-        " [  9.00000000e-01   4.66666667e-01   4.66666667e-01   4.66666667e-01", 
-        "    3.33333333e-02   3.33333333e-02   3.33333333e-02   3.33333333e-02", 
-        "    3.33333333e-02   3.33333333e-02]", 
-        " [  3.33333333e-04   3.33333333e-04   3.33333333e-04   4.99666667e-01", 
-        "    3.33333333e-04   3.33333333e-04   4.99666667e-01   3.33333333e-04", 
-        "    4.99666667e-01   9.99000000e-01]]", 
-        "[[ -1.00050033e-03  -6.93814070e-01  -6.93814070e-01  -6.93814070e-01", 
-        "   -8.00636757e+00  -8.00636757e+00  -8.00636757e+00  -8.00636757e+00", 
-        "   -8.00636757e+00  -8.00636757e+00]", 
-        " [ -1.05360516e-01  -7.62140052e-01  -7.62140052e-01  -7.62140052e-01", 
-        "   -3.40119738e+00  -3.40119738e+00  -3.40119738e+00  -3.40119738e+00", 
-        "   -3.40119738e+00  -3.40119738e+00]", 
-        " [ -8.00636757e+00  -8.00636757e+00  -8.00636757e+00  -6.93814070e-01", 
-        "   -8.00636757e+00  -8.00636757e+00  -6.93814070e-01  -8.00636757e+00", 
-        "   -6.93814070e-01  -1.00050033e-03]]"
-       ]
-      }
-     ], 
-     "prompt_number": 96
+     "outputs": [], 
+     "prompt_number": 6
     }, 
     {
      "cell_type": "code", 
      "collapsed": false, 
      "input": [
-      "a = np.array([[0, 0], [0, 0], [0, 0]])", 
-      "print a"
+      "#now lets do some primitive pileup processing with the help", 
+      "#of pysam. Based on this code: https://github.com/indapa/PysamUtils/blob/master/pysam_pileup.py", 
+      "import pysam", 
+      "import sys", 
+      "bamfilename='/Users/amit/BCResearch/OlivierData/Project_TOPSWga/AlignmentGazing/wga.SNP.novel.12:82756:82957.bam'", 
+      "pybamfile = pysam.Samfile(bamfilename, \"rb\" )", 
+      "rgdictlist=pybamfile.header['RG']", 
+      "readgroupDictionary={}", 
+      "for dictionary in rgdictlist:", 
+      "    #print dictionary['ID'], dictionary['SM']", 
+      "    readgroupDictionary[ dictionary['ID'] ]= dictionary['SM']", 
+      "#print readgroupDictionary", 
+      "#a small region with 2-3x coverage", 
+      "chrom='12'", 
+      "start=82746", 
+      "end=82771", 
+      "pileup_iter=pybamfile.pileup( chrom,start,end,stepper = \"all\" )", 
+      "for pileupcolumn in pileup_iter:", 
+      "    observed_data=[]", 
+      "    if pileupcolumn.pos < start or pileupcolumn.pos > end:", 
+      "        continue", 
+      "    sys.stdout.write('chr'+chrom+ \" interval start: \" + str(start) +  \" interval end: \" + str(end) + \" pileup position \" + str(pileupcolumn.pos) + \" \")", 
+      "    print 'coverage at base %s = %s' % (pileupcolumn.pos , pileupcolumn.n)", 
+      "    for pileupread in pileupcolumn.pileups:", 
+      "        tid=pileupread.alignment.tid", 
+      "        bq=ord ( pileupread.alignment.qual[ pileupread.qpos ] )  - 33", 
+      "        observed_data.append( (pileupread.alignment.qname,pileupread.alignment.seq[pileupread.qpos], bq) )", 
+      "        print dict( pileupread.alignment.tags )['RG']", 
+      "", 
+      "        #print pileupread.alignment.qname, pileupread.alignment.is_reverse", 
+      "        #print pileupread.alignment.seq[pileupread.qpos]", 
+      "        #print pileupread.alignment.pos, pileupread.alignment.qlen", 
+      "        #print", 
+      "    print observed_data", 
+      "    print \"===\""
      ], 
      "language": "python", 
      "outputs": [
@@ -235,56 +98,140 @@
        "output_type": "stream", 
        "stream": "stdout", 
        "text": [
-        "[[0 0]", 
-        " [0 0]", 
-        " [0 0]]"
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82746 coverage at base 82746 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'A', 30), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'A', 31)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82747 coverage at base 82747 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'G', 31), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 32)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82748 coverage at base 82748 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'G', 30), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'G', 33)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82749 coverage at base 82749 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 32), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 33)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82750 coverage at base 82750 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 31), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 32)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82751 coverage at base 82751 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'G', 29), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'G', 32)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82752 coverage at base 82752 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 29), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 31)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82753 coverage at base 82753 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'G', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'G', 32)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82754 coverage at base 82754 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 28), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 32)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82755 coverage at base 82755 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 23), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 30)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82756 coverage at base 82756 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 28), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 32)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82757 coverage at base 82757 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 25), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 30)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82758 coverage at base 82758 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 29), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 31)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82759 coverage at base 82759 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 28)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82760 coverage at base 82760 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 30)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82761 coverage at base 82761 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 30)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82762 coverage at base 82762 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 26), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 29)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82763 coverage at base 82763 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 28), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 29)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82764 coverage at base 82764 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 28), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 30)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82765 coverage at base 82765 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 25), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 28)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82766 coverage at base 82766 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'G', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'G', 29)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82767 coverage at base 82767 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 29)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82768 coverage at base 82768 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 27)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82769 coverage at base 82769 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'C', 28), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'C', 29)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82770 coverage at base 82770 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'T', 27), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'T', 27)]", 
+        "===", 
+        "chr12 interval start: 82746 interval end: 82771 pileup position 82771 coverage at base 82771 = 2", 
+        "ZFJDLOT83TE", 
+        "ZFJDLOT83TE", 
+        "[('D9WJ65M1:224:BB006PABXX:2:21:8481:67213', 'G', 25), ('D9WJ65M1:224:BB006PABXX:2:22:10657:45248', 'G', 28)]", 
+        "==="
        ]
       }
      ], 
-     "prompt_number": 60
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "for i in range(3):", 
-      "    print i", 
-      "    a[i,1]=1", 
-      "    "
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "0", 
-        "1", 
-        "2"
-       ]
-      }
-     ], 
-     "prompt_number": 61
-    }, 
-    {
-     "cell_type": "code", 
-     "collapsed": false, 
-     "input": [
-      "print a"
-     ], 
-     "language": "python", 
-     "outputs": [
-      {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "[[0 1]", 
-        " [0 1]", 
-        " [0 1]]"
-       ]
-      }
-     ], 
-     "prompt_number": 62
+     "prompt_number": 31
     }, 
     {
      "cell_type": "code", 
