added some code to test  indexToGenotype again

--- a/PythonNotebook/pgmsnp.ipynb
+++ b/PythonNotebook/pgmsnp.ipynb
@@ -8,7 +8,7 @@
    "cells": [
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "import pysam", 
       "import sys", 
@@ -95,7 +95,7 @@
     }, 
     {
      "cell_type": "code", 
-     "collapsed": false, 
+     "collapsed": true, 
      "input": [
       "def returnGenotypePriorFounderFactor( refbase,altbases,genotypePrior, theta=0.001,ploidy=2):", 
       "    \"\"\" Not sure this is right, but its simple enough", 
@@ -138,7 +138,7 @@
      ], 
      "language": "python", 
      "outputs": [], 
-     "prompt_number": 113
+     "prompt_number": 1
     }, 
     {
      "cell_type": "code", 
@@ -149,22 +149,17 @@
      "language": "python", 
      "outputs": [
       {
-       "output_type": "stream", 
-       "stream": "stdout", 
-       "text": [
-        "GA", 
-        "['GG', 'GA', 'AA']", 
-        "GG homoz reference", 
-        "GA heterzygote", 
-        "AA non-ref homoz", 
-        "name: genotypePrior", 
-        "var: mu", 
-        "card: 3", 
-        "val: 0.9985 0.001 0.0005"
+       "ename": "NameError", 
+       "evalue": "name 'returnGenotypeGivenGenotypePriors' is not defined", 
+       "output_type": "pyerr", 
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)", 
+        "\u001b[0;32m/Users/amit/software/Pgmsnp/PythonNotebook/<ipython-input-2-35a05eec9e6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mreturnGenotypeGivenGenotypePriors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'G'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'A'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'mu'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m", 
+        "\u001b[0;31mNameError\u001b[0m: name 'returnGenotypeGivenGenotypePriors' is not defined"
        ]
       }
      ], 
-     "prompt_number": 115
+     "prompt_number": 2
     }, 
     {
      "cell_type": "code", 
